[package]
name = "livesplit-server"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]

[dependencies]
livesplit-core = { git = "https://github.com/CryZe/livesplit-core", rev="9f5e9a9ea88ef6748fa848e34804b0a58725ca54" }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
parking_lot = "0.4.4"
serde_derive = "1.0.8"
serde = "1.0.8"
serde_yaml = "0.7.0"
